@@ -129,13 +129,6 @@ Add a mapping for the given
 to the given
 .Ar mime-type .
 Both argument are strings.
-.It Ic default type Ar string
-Set the default media type that is used if the media type for a
-specified extension is not found.
-If not specified, the
-.Ic default type
-is set to
-.Dq application/octet-stream .
 .El
 .Ss Servers
 Every virtual host is defined by a
@@ -168,6 +161,13 @@ Enable the execution of CGI scripts if
 is a prefix of the user request string.
 An empty path "" will effectively enable the execution of any file
 with the executable bit set inside the root directory.
+.It Ic default type Ar string
+Set the default media type that is used if the media type for a
+specified extension is not found.
+If not specified, the
+.Ic default type
+is set to
+.Dq application/octet-stream .
 .It Ic lang Ar string
 Specify the language tag for the text/gemini content served.
 If not specified, no
